Fix cover-container not covering bottom of page

--- a/src/styles/footer.styl
+++ b/src/styles/footer.styl
@@ -44,7 +44,7 @@
 
 @media (min-width: 1400px)
     .mastfoot
-        font-size 1.8vh
+        font-size 1.6vh
 
 @media (min-width: 1400px) and (max-height: 900px)
     .mastfoot
